--- a/css/style.css
+++ b/css/style.css
@@ -1,220 +1,254 @@
-:root {
-    font-size: 0.875rem;
-    box-sizing: border-box;
-    font-family: "Rubik", sans-serif;
-    --blue: #0d6efd;
-    --indigo: #6610f2;
-    --purple: #6f42c1;
-    --pink: #d63384;
-    --red: #dc3545;
-    --orange: #fd7e14;
-    --yellow: #ffc107;
-    --green: #198754;
-    --teal: #20c997;
-    --cyan: #0dcaf0;
-    --dark: #292a2b;
-    --white: #fff;
-    --grey_light: #CCCCCC;
-}
+/* 
+  Shopping Cart v1.0.0-alpha (<repo URL>)
+  Copyright 2022 CODE SPACE TEAM
+  Licensed under MIT (<repo URL>) 
+*/
 
-/*reset*/
-*,
-*::before,
-*::after {
-    padding: 0;
-    margin: 0;
-    border: 0;
-    box-sizing: inherit;
-    outline: 0 none;
+@import url("https://fonts.googleapis.com/css2?family=Antic+Slab&family=Comfortaa:wght@500;600&family=Kameron:wght@400;700&family=Pacifico&display=swap");
+
+html {
+  font-size: 0.785rem;
 }
 
 body {
-    width: 100%;
-    height: 100vh;
-    font-family: "Lato", sans-serif;
-    background-color: #c9d6ff;
-    background-image: linear-gradient(to right, #e2e2e2, #c9d6ff);
+  font-family: "Antic Slab", serif;
+  height: 100vh;
+  padding-top: 11.5rem;
+}
+/* Header */
+.fa-bag-shopping {
+  color: #222222;
+  transform: rotate(25deg);
+}
+.logo {
+  font-size: 1.9rem;
+  color: #ffc107;
+}
+.fa-basket-shopping {
+  color: #fefefe;
+  opacity: 1;
+  transition: all 0.2s ease;
+}
+.fa-basket-shopping:hover {
+  color: #c61a27 !important;
+  opacity: 0.9;
+  -webkit-transform: rotateZ(-30deg);
+  -ms-transform: rotateZ(-30deg);
+  transform: rotateZ(-30deg);
+}
+/* Modals */
+button.close:focus {
+  outline: none;
+}
+/* shopping cart animation */
+@-webkit-keyframes hvr-pulse {
+  25% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+  75% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
+@keyframes hvr-pulse {
+  25% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+  75% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
+.hvr-pulse {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  -webkit-animation-name: hvr-pulse;
+  animation-name: hvr-pulse;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+}
+h4,
+h5.modal-title {
+  font-family: "Comfortaa", cursive;
+}
+h5 {
+  font-family: "Pacifico", cursive;
+}
+/* Product cards */
+.card-deck .card {
+  width: 100%;
+  transition: all 0.2s ease;
+}
+.card-deck .card:hover {
+  box-shadow: 1px 1px #53a7ea, 2px 2px #53a7ea, 3px 3px #53a7ea;
+  -webkit-transform: translateX(-3px);
+  transform: translateX(-3px);
 }
 
-h1 {
-    font-family: "Smooch Sans", sans-serif;
-    font-size: 3.9rem;
-
+.pricing-card-title {
+  font-family: "Kameron", serif;
 }
 
-.main {
-    width: 80%;
-    padding: 2em;
-    margin: 10% auto;
-    background-color: white;
+.table td {
+  vertical-align: middle !important;
 }
 
-.main .container {
-    overflow-x: auto;
+td .card {
+  max-width: 8rem;
+  margin:auto;
 }
 
-.main form {
-    width: 100%;
+td button span {
+  font-size: 1.3em;
+  font-weight: bolder;
+}
+#cartPurchased,
+#addedToCart,
+#alreadyAddedToCart {
+  font-size: 1.5em;
+}
+#cartPurchased .modal-content {
+  background-color: #d4edda;
+}
+#addedToCart .modal-content {
+  background-color: #d1ecf1;
+}
+#alreadyAddedToCart .modal-content {
+  background-color: #fff3cd;
 }
 
-.main label {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+/* Quantity selectors */
+.quantity {
+  position: relative;
 }
 
-.main label div {
-    width: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.5em;
-    background-color: var(--blue);
-    min-height: 60px;
-    font-size: 1.1rem;
-    border-bottom-right-radius: 0.3rem;
-    border-top-right-radius: 0.3rem;
-    transition: all 0.4s ease-in-out;
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-.main label div:hover {
-    background-color: #0b5ed7;
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
-.main label div .fa-solid {
-    transition: all 0.4s ease-in-out;
+.quantity input {
+  width: 6rem;
+  height: 4rem;
+  line-height: 1.65;
+  float: left;
+  display: block;
+  padding: 0;
+  margin: 0;
+  padding-left: 20px;
+  border: 1px solid #eee;
+  font-size: 16px;
+  font-weight: bolder;
 }
 
-.main label div .fa-solid:hover {
-    transform: translateX(10px);
+.quantity input:focus {
+  outline: 0;
 }
 
-.main input {
-    display: block;
-    width: 80%;
-    background-color: #bee5e3;
-    padding: 0.5em;
-    min-height: 60px;
-    font-size: 1.1rem;
-    border-bottom-left-radius: 0.3rem;
-    border-top-left-radius: 0.3rem;
-    transition: all 0.15s ease-in-out;
+.quantity-nav {
+  float: left;
+  position: relative;
+  height: 4rem;
 }
 
-.main input::placeholder {
-    color: var(--dark)
+.quantity-button {
+  position: relative;
+  cursor: pointer;
+  border-left: 1px solid #eee;
+  width: 2rem;
+  text-align: center;
+  color: #333;
+  font-size: 16px;
+  font-weight: bolder;
+  line-height: 1.7;
+  -webkit-transform: translateX(-100%);
+  transform: translateX(-100%);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
-.main input:focus {
-    border: 5px solid transparent;
-    border-radius: 0.3rem;
-    background-color: white;
-    box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-    z-index: 2;
+.quantity-button.quantity-up {
+  position: absolute;
+  height: 50%;
+  top: 0;
+  border-bottom: 1px solid #eee;
 }
 
-.main .alert {
-    width: 100%;
-    height: auto;
-    opacity: 1;
-    background-color: var(--pink);
-    padding: 1em;
-    margin: 1em auto;
-    border-radius: .3rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex start;
-    transition: all 0.3s linear;
-
+.quantity-button.quantity-down {
+  position: absolute;
+  bottom: -1px;
+  height: 50%;
 }
 
-.main .alert .fa-square-xmark {
+.disabled {
+  pointer-events: none;
+  cursor: default;
+  text-decoration: none;
+  opacity: 0.3;
+}
+/* Footer */
+footer {
+  font-size: 1.2rem;
+}
+.date {
+  color: #dc3545;
+  padding-left: 0.3em;
+  font-weight: bold;
+  font-style: italic;
+}
+/* Tablet devices */
+@media (min-width: 576px) {
+  body {
+    padding-top: 8.5rem;
+  }
+  .card-deck .card {
+    max-width: 45%;
+  }
+  footer {
     font-size: 1.5rem;
-
+  }
 }
-
-.main .alert .fa-square-xmark:hover {
-    font-size: 1.5rem;
-    background-color: var(--dark);
-
+/* Laptop devices */
+@media (min-width: 768px) {
+  body {
+    padding-top: 5.5rem;
+  }
+  .card-deck .card {
+    max-width: 30%;
+  }
+  footer {
+    font-size: 1.8rem;
+  }
 }
-
-.main table {
-    width: 100%;
-    border-collapse: collapse;
-    border-spacing: 0;
-    border-radius: 0.3rem;
-    margin: 2em auto;
+/* Desktop */
+@media (min-width: 992px) {
+  html {
+    font-size: 1.285rem;
+  }
+  .modal-footer{
+  
+    font-size: 1.8rem;
+  }
 }
-
-.main tr {
-    background-color: #f6f6f6;
-}
-
-.main tr:nth-of-type(odd) {
-    background-color: #e9e9e9;
-}
-
-.main th {
-    background-color: #2980d9;
-    padding: .5em;
-    font-weight: 700;
-    font-size: 1.5rem;
-    text-transform: capitalize;
-}
-
-.main th:first-child {
-    border-top-left-radius: 0.3rem;
-}
-.main th:last-child {
-    border-top-right-radius: 0.3rem;
-}
-.main td{
-    font-family: "Fredoka", sans-serif;
-    padding: 0.8rem;
-}
-.main td:first-child{
-    width: 70%;
-    font-size: 1.5rem;
-}
-.main td:nth-child(2),:nth-child(3){
-    width: 15%;
-    font-size: 1.1rem;
-}
-.main table .fa-2x{
-    font-size: 1.3rem;
-    color: var(--yellow);
-    transition: all 0.3s ease-in-out;
-}
-.main table .fa-2x:hover{
-    transform: scale(1.2);
-    color: #ffca2c;
-}
-.main table td:nth-child(3) .fa-2x{
-    color: #dc3545;
-}
-.main table td:nth-child(3) .fa-2x:hover{
-    color: #bb2d3b;
-}
-.main table .fa-circle-check{
-    color: var(--green);
-    margin-right: 15px;
-    transition: all 0.3s ease-in-out;
-}
-.main table .fa-circle-check:hover{
-    color: var(--teal)
-}
-.main table .editable{
-    background-color: white;
-    display: inline-block;
-    padding: .3em;
-    border-radius: 0.3rem;
-    margin-top: .3em;
-}
-.main .dismissible{
-    opacity: 0 !important;
-    height: 0 !important;
-    padding: 0 !important;
-    transition: all 0.3s linear;
-
+/* Large devices */
+@media (min-width: 1200px) {
+  .card-deck .card {
+    max-width: 22%;
+  }
 }
